fix z-index problem

--- a/stylesheets/3week1.css
+++ b/stylesheets/3week1.css
@@ -35,9 +35,9 @@
     height: 800px;
     background-image: url("../assets/brooklyn-bridge-371216.jpg");
     background-size: cover;
-    z-index: -2;
 }
-#search_main::before { position: absolute; content:""; width: 100%; height: 800px;  z-index: -1; top: 0;  background-color: black; opacity: 0.3; z-index: -1; }
+#search_main::before { position: absolute; content:""; width: 100%; height: 800px;  z-index: -1; top: 0;  background-color: black; opacity: 0.3; z-index: 1; }
+#search_main .uplayer_container { position: absolute; width: 100%; height: 800px; z-index: 2 }
 
 #logo { float: left; width: 50px; height: 50px; margin-left: 200px; padding-top: 20px;  }
 
